[gd_scene load_steps=3 format=3 uid="uid://do8drpsehn2uc"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_xlapc"]
[ext_resource type="AudioStream" uid="uid://04lm8m4fy00f" path="res://Assets/music/dying-sound-363801.mp3" id="2_dxqww"]

[node name="Killzone" type="Area2D"]
script = ExtResource("1_xlapc")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="sfx_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_dxqww")
volume_db = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
